# module2

./: .env  .gitignore  Dockerfile  Makefile  cdc.py  docker-compose.yml  init_replica_set.py  pyproject.toml  settings.py  test_cdc.py
data/mongo-1/: .dbshell  WiredTiger.turtle  WiredTiger.wt  WiredTigerHS.wt  _mdb_catalog.wt  collection-0-6526221786089841623.wt  collection-10-6526221786089841623.wt  collection-12-6526221786089841623.wt  collection-14-6526221786089841623.wt  collection-15-6526221786089841623.wt  collection-17-6526221786089841623.wt  collection-2-6526221786089841623.wt  collection-25-6526221786089841623.wt  collection-36-6526221786089841623.wt  collection-4-6526221786089841623.wt  collection-6-6526221786089841623.wt  collection-8-6526221786089841623.wt  index-1-6526221786089841623.wt  index-11-6526221786089841623.wt  index-13-6526221786089841623.wt  index-16-6526221786089841623.wt  index-18-6526221786089841623.wt  index-26-6526221786089841623.wt  index-3-6526221786089841623.wt  index-37-6526221786089841623.wt  index-38-6526221786089841623.wt  index-5-6526221786089841623.wt  index-7-6526221786089841623.wt  index-9-6526221786089841623.wt  sizeStorer.wt
data/mongo-2/: WiredTiger.turtle  WiredTiger.wt  WiredTigerHS.wt  _mdb_catalog.wt  collection-0-4461133313407292609.wt  collection-10-4461133313407292609.wt  collection-18-4461133313407292609.wt  collection-19-4461133313407292609.wt  collection-2-4461133313407292609.wt  collection-23-4461133313407292609.wt  collection-31-4461133313407292609.wt  sizeStorer.wt  (+16 more)
data_flow/: mq.py
db/: mongo.py
(+27 files in other folders)
